# opencl-tutorial

./: CMakeLists.txt  README.md
lib/OpenCL/lib/: OpenCL.lib
part-1/: CMakeLists.txt  Main.cpp
part-2/: CMakeLists.txt  Main.cpp
part-3/: CMakeLists.txt  Main.cpp
part-4/: CMakeLists.txt  Main.cpp
